--- a/main.css
+++ b/main.css
@@ -1,7 +1,92 @@
+/* ANIMATION 1 */
+@keyframes slideinleft {
+from {
+    transform:translateX(-300px);
+}   
+
+to {
+    transform: translateX(0);
+}
+
+}
+
+.heading-1 {
+    animation-name:slideinleft;
+    animation-duration:1s; 
+    animation-timing-function:ease-in;
+    animation-delay:1s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    animation-fill-mode: both;
+    
+    transform:translateX(-150px);
+
+}
+
+.heading-3 {
+    animation-name:slideinleft;
+    animation-duration:1s;
+    animation-timing-function:ease-in;
+    animation-delay:1.5s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    animation-fill-mode: both;
+    
+    transform:translateX(-150px);
+}
+
+.heading-4 {
+    animation-name:slideinleft;
+    animation-duration:1s;
+    animation-timing-function:ease-in;
+    animation-delay:2s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    animation-fill-mode: both;
+    
+    transform:translateX(-150px);
+}
+
+
+/* TEXT ANIMATION */
+.heading-1, .heading-3, .heading-4 {
+font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-size: 3rem;
+color: #6B4906;
+font-weight:bold;
+}
+
+
+/* ANIMATION 2 */
+@keyframes spin {
+from {
+transform: rotate(0deg); 
+    
+}
+
+to {
+ transform: rotate(360deg); 
+
+}
+
+}
+
+.star {
+    width: 90px;
+    height: 90px;
+    background-color: #614A1E;
+    clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+    animation: spin 2s linear infinite;
+    position: absolute;
+    top: 50px; 
+    left: 50%;
+}
+
+
 * {
-    background-color: rgb(255, 255,82);
-    color:#0074FF; 
-    font-family:Arial, Helvetica, sans-serif;
+    background-color: #D1FF00;
+    color:#6B4906; 
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;     
     text-align: center;
     
@@ -28,27 +113,24 @@ nav a {
     text-decoration: none;
     font-weight: bold;
     color: rgb(118, 8, 8);
-   
-
 }
 
 nav a:hover {
     text-decoration: underline;
 }
-
+ /* LOGO STYLE */
 #logo {
     font-weight: 600;
-    font-size:  1.2rem;
+    font-size: 1.2rem;
     border: 2px solid rgb(118, 8, 8);
     display: inline;
     padding: 5px;  
     
     
 }
-       
 
-    
-    
+
+       
 /* MAIN */
     .main-img {
         width: 100%;
@@ -56,14 +138,6 @@ nav a:hover {
         border-radius: 10px;
 }
     
-
-/* CATEGORY SECTION */
-.category-container {
-display: grid;
-grid-template-columns: repeat(auto-fit, minmax (200px, 1fr)) ;
-gap: 20px;
-padding: 20px;
-}
 
 .category-image {
     width: 100%; 
@@ -73,12 +147,7 @@ padding: 20px;
     object-fit: cover;   
 }
 
-/* FOOTER */  
- footer {
-    margin-top: 3rem;
-    border-top: 1px
-}
-   
+
 /* RESPONSIVE */
 @media (max-width: 760px){
 header {
@@ -86,8 +155,21 @@ header {
     text-align: center;
 }
 
+
+/* CATEGORY SECTION */
+.category-container {
+    grid-template-columns: repeat(1, 1fr);
+    }
+    
 nav ul {
     flex-direction: column;
     gap: 10px;
 }
 }
+
+/* FOOTER */  
+footer {
+    margin-top: 3rem;
+    border-top: 1px
+}
+   
